kubernetes/networking/traefik/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway-internal
  labels:
    app: traefik-gateway-internal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      port: 8443
      hostname: "*.brwn.network"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''	
            kind: Secret	
            name: wildcard-brwn-network-cert
      allowedRoutes:
        namespaces:
          from: All
